Fixed spacing issue on filter select

--- a/client/src/styles/_ItemList.scss
+++ b/client/src/styles/_ItemList.scss
@@ -50,6 +50,7 @@
             height: 100%;
             width: 40%;
             max-width: 250px;
+            padding-top: 5px;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -57,7 +58,7 @@
             #sorting {
                 height: 100%;
                 width: 100%;
-                margin-left: 5px;
+                margin-left: 10px;
             }
             #filter-button {
                 height: 100%;
